@@ -2091,12 +2091,15 @@ void uloc_setDefault(const char *localeID, UErrorCode *status);
 
 static UCollator *collator = NULL;
 
+static Rboolean collationLocaleSet = FALSE;
+
 /* called from platform.c */
 void attribute_hidden resetICUcollator(void)
 {
     if (collator)
         ucol_close(collator);
     collator = NULL;
+    collationLocaleSet = FALSE;
 }
 
 static const struct
@@ -2124,6 +2127,12 @@ static const struct
                {"hiragana_quaternary", UCOL_HIRAGANA_QUATERNARY_MODE},
                {NULL, 0}};
 
+// Idea is to remap Windows' locale names in due course
+static const char *getLocale(void)
+{
+    return setlocale(LC_COLLATE, NULL);
+}
+
 SEXP attribute_hidden do_ICUset(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP x;
@@ -2143,17 +2152,26 @@ SEXP attribute_hidden do_ICUset(SEXP call, SEXP op, SEXP args, SEXP rho)
         if (streql(this, "locale"))
         {
             if (collator)
+            {
                 ucol_close(collator);
-            // or setlocale(LC_COLLATE, NULL) as below.
-            if (streql(s, "default"))
-                uloc_setDefault(NULL, &status);
-            else
-                uloc_setDefault(s, &status);
-            if (U_FAILURE(status))
-                error("failed to set ICU locale %s (%d)", s, status);
-            collator = ucol_open(NULL, &status);
-            if (U_FAILURE(status))
-                error("failed to open ICU collator (%d)", status);
+                collator = NULL;
+            }
+            if (strcmp(s, "none"))
+            {
+                if (streql(s, "default"))
+                    uloc_setDefault(getLocale(), &status);
+                else
+                    uloc_setDefault(s, &status);
+                if (U_FAILURE(status))
+                    error("failed to set ICU locale %s (%d)", s, status);
+                collator = ucol_open(NULL, &status);
+                if (U_FAILURE(status))
+                {
+                    collator = NULL;
+                    error("failed to open ICU collator (%d)", status);
+                }
+            }
+            collationLocaleSet = TRUE;
         }
         else
         {
@@ -2190,30 +2208,37 @@ SEXP attribute_hidden do_ICUset(SEXP call, SEXP op, SEXP args, SEXP rho)
 /* NB: strings can have equal collation weight without being identical */
 attribute_hidden int Scollate(SEXP a, SEXP b)
 {
-    int result = 0;
-    UErrorCode status = U_ZERO_ERROR;
-    UCharIterator aIter, bIter;
-    const char *as = translateCharUTF8(a), *bs = translateCharUTF8(b);
-    int len1 = (int)strlen(as), len2 = (int)strlen(bs);
-
-    if (collator == NULL && strcmp("C", setlocale(LC_COLLATE, NULL)))
+    if (!collationLocaleSet)
     {
-        /* do better later */
-        uloc_setDefault(setlocale(LC_COLLATE, NULL), &status);
-        if (U_FAILURE(status))
-            error("failed to set ICU locale (%d)", status);
-        collator = ucol_open(NULL, &status);
-        if (U_FAILURE(status))
-            error("failed to open ICU collator (%d)", status);
+        collationLocaleSet = TRUE;
+#ifndef Win32
+        if (strcmp("C", getLocale()))
+        {
+            UErrorCode status = U_ZERO_ERROR;
+            uloc_setDefault(getLocale(), &status);
+            if (U_FAILURE(status))
+                error("failed to set ICU locale (%d)", status);
+            collator = ucol_open(NULL, &status);
+            if (U_FAILURE(status))
+            {
+                collator = NULL;
+                error("failed to open ICU collator (%d)", status);
+            }
+        }
+#endif
     }
     if (collator == NULL)
         return strcoll(translateChar(a), translateChar(b));
 
+    UCharIterator aIter, bIter;
+    const char *as = translateCharUTF8(a), *bs = translateCharUTF8(b);
+    int len1 = (int)strlen(as), len2 = (int)strlen(bs);
     uiter_setUTF8(&aIter, as, len1);
     uiter_setUTF8(&bIter, bs, len2);
-    result = ucol_strcollIter(collator, &aIter, &bIter, &status);
+    UErrorCode status = U_ZERO_ERROR;
+    int result = ucol_strcollIter(collator, &aIter, &bIter, &status);
     if (U_FAILURE(status))
-        error("could not collate");
+        error("could not collate using ICU");
     return result;
 }
 
